prevent content in custom pages and product descriptions from overflowing

--- a/source/stylesheets/layout.css.scss
+++ b/source/stylesheets/layout.css.scss
@@ -81,6 +81,7 @@ html {
 
 img { vertical-align: bottom; }
 
+
 p {
   font: .875em $serif-font;
   line-height: 24px;
@@ -103,7 +104,7 @@ ul {
 		color: $dark-green-color;
 	}
 	
-	img { 
+	img, iframe, embed, object, video { 
 		max-width:100%;
 	}
 	
